# genshin-damage-track

./: .gitignore  BASE_DESIGN.md  CONTRIBUTING.md  LICENSE  README.md  genshin-damage-track.spec  pyproject.toml  機能要件.md
.github/: copilot-instructions.md
.github/workflows/: ci.yml
scripts/: release.ps1
src/genshin_damage_track/: __init__.py  config.py  detector.py  main.py  models.py  orchestrator.py  visualizer.py
src/genshin_damage_track/pipeline/: __init__.py  cropper.py  parser.py  recognizer.py  sampler.py
tests/: conftest.py  test_cropper.py  test_detector.py  test_orchestrator.py  test_parser.py  test_recognizer.py  test_sampler.py  test_visualizer.py
